# Eurobot-Localization

./: .gitignore  README.md  RECORD.md  install.sh  simulation.sh
.YDLidar-SDK/: CMakeLists.txt
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/libphidget22/: phidget22.h
devel/include/phidgets_msgs/: EncoderDecimatedSpeed.h  SetAnalogOutput.h  SetAnalogOutputRequest.h  SetAnalogOutputResponse.h  SetDigitalOutput.h  SetDigitalOutputRequest.h  SetDigitalOutputResponse.h
devel/lib/eurobot_localization/: ekf  uc_ekf
devel/lib/fake_odom/: fake_odom_node
devel/lib/lidar_localization/: area_obstacles_extractor_node  beacon_scan_tracker_node  lidar_localization_node
devel/lib/obstacle_detector/: obstacle_extractor_node  obstacle_publisher_node  obstacle_tracker_node  scans_merger_node
devel/lib/pkgconfig/: eurobot_localization.pc  fake_odom.pc  libphidget22.pc  lidar_localization.pc  obstacle_detector.pc  phidgets_accelerometer.pc  phidgets_api.pc  (+9 more)
eurobot_localization/: .clang-format  CMakeLists.txt  README.md  package.xml
eurobot_localization/config/: global_filter_basic.yaml  global_filter_blue.yaml  global_filter_green.yaml  odom_ekf_gll.yaml
eurobot_localization/include/: ekf.h  uc_ekf.h
eurobot_localization/launch/: ekf_fullstate_new.launch  eurobot_localization.launch  eurobot_localization_robots.launch  global_ekf_with_vive.launch  test_rviz.launch
eurobot_localization/rviz/: eurobot_localization_robot1.rviz  robot1_dit_test.rviz  stage.rviz
eurobot_localization/scripts/: ekf.py
eurobot_localization/src/: ekf.cpp  rival_localization.cpp  rival_localization_plus.cpp  uc_ekf.cpp
fake_odom/src/: fake_odom.cpp
imu/imu_drive/: CMakeLists.txt
imu/imu_node/: CMakeLists.txt  package.xml
lidar/ydlidar_ros_driver/: README.md
lidar_localization/: CMakeLists.txt  README.md
lidar_localization/include/lidar_localization/: area_obstacles_extractor.h  beacon_scan_tracker.h  lidar_localization.h
lidar_localization/include/lidar_localization/util/: math_util.h
lidar_localization/launch/: nodelets.launch  obstacle_track.launch
lidar_localization/params/: lidar_localization_params_2023.yaml
lidar_localization/src/: beacon_scan_tracker.cpp  rx_to_odom.cpp  scan_rosbag.cpp
lidar_localization/src/nodes/: area_obstacles_extractor_node.cpp  beacon_scan_tracker_node.cpp
local_filter/local_filter/: CMakeLists.txt  package.xml
odometry/: package.xml
odometry/launch/: odometry.launch
odometry/lib/: odometry.cpp
odometry/src/: odometry_node.cpp
src/.YDLidar-SDK/: .gitignore  CMakeCache.txt  CTestConfiguration.ini  Makefile  cmake_install.cmake
src/YDLidar-SDK/: CTestTestfile.cmake
src/lidar_localization/: nodelet_plugins.xml  package.xml
src/lidar_localization/launch/: lidar_localization.launch
src/lidar_localization/params/: beacon_excrator_params.yaml  obstacle_excrator_params.yaml
src/lidar_localization/src/nodelets/: lidar_localization_nodelet.cpp
src/lidar_localization/src/nodes/: lidar_localization_node.cpp
(+210 files in other folders)
