<?xml version="1.0"?>
<package format="2">
  <name>lidar_localization</name>
  <version>0.0.0</version>
  <description>The lidar_localization package</description>
  <maintainer email="paul@todo.todo">paul</maintainer>
  <author>Sunfu-Chou</author>

  <license>NONE</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>obstacle_detector</buildtool_depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>rviz</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>obstacle_detector</depend>
  
  <!-- <depend>ydlidar_ros</depend> -->

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
